@@ -1,3 +1,2 @@
 #!/bin/bash -v
-#java  -XX:MaxPermSize=512m -Xms512m -Xmx512m -Xss16k simulator/Router
-java -Xss48k simulator/Router
+java -Xss64k simulator/Router
